12.0 fix left nav tooltip z-index and cursor style (#6381)
* 01 delete useless z-index

* 02 change tooltip cursor style

--- a/frontend/src/css/lib-content-view.css
+++ b/frontend/src/css/lib-content-view.css
@@ -7,7 +7,6 @@
   background-color: #fff;
   position: absolute;
   top: 48px;
-  z-index: 2;
   width: 100%;
   height: calc(100% - 48px);
   border-top: 1px solid #e8e8e8;
